--- a/gb/20/7/13/n12252591.md
+++ b/gb/20/7/13/n12252591.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ofatuf344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/ofatuf344/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/ofatuf344/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ofatuf344/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ofatuf344/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ofatuf344/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ofatuf344/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ofatuf344/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>沈荣津、王美花、陈时中出席北车 三倍券吃糕点做公益活动</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/ea75c0aee23322f95fecba639880229d-600x400.jpg" />
 <h6>行政院副院长沈荣津（前左3）、经济部长王美花（前左2）、卫福部长陈时中（前右2）等人13日在台北火车站出席“用点心，让爱不隔离”记者会，鼓励消费者用三倍券振兴买气，同时响应做公益。（陈柏州／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年07月13日讯】（大纪元记者李怡欣台湾台北报导）国内疫情解封后北车广场大翻修，行政院副院长<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>、经济部长<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E7%8E%8B%E7%BE%8E%E8%8A%B1.md#1">王美花</a>与卫福部长<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E9%99%88%E6%97%B6%E4%B8%AD.md#1">陈时中</a>、民进党立委何欣纯13日出席糕饼同业公会在<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E8%BD%A6%E7%AB%99.md#1">台北车站</a>举办的公益活动，鼓励消费者用<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E4%B8%89%E5%80%8D%E5%88%B8.md#1">三倍券</a>振兴买气，同时响应做公益。</p>
-<p><ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>表示，台湾糕饼业者相当有心，因疫情影响，业绩3、4成受影响，观光伴手礼业者营业额下降8、9成，振兴<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E4%B8%89%E5%80%8D%E5%88%B8.md#1">三倍券</a>15日上路，希望民众多吃点心振兴经济还能做公益。</p>
-<p><ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E7%8E%8B%E7%BE%8E%E8%8A%B1.md#1">王美花</a>致词表示，疫情关系，这阵子国际观光客无法来台，趁三倍券热潮刺激内需，支持台湾在地点心，领三倍券实体券的人比较多，女生会拿去买甜点。</p>
-<p>卫福部长<ahref="https://github.com/ofatuf344/djy/blob/master/gb/tag/%E9%99%88%E6%97%B6%E4%B8%AD.md#1">陈时中</a>提到，有人会问他“糕饼跟防疫有什么关系？”疫情让人郁闷，吃甜点有好心情，才能健康长期抗疫，台湾食品制程及添加物有食药署严管品质，民众可安心吃；身为牙医，陈时中不忘提醒，吃完甜食要记得刷牙。</p>
+<p>【大纪元2020年07月13日讯】（大纪元记者李怡欣台湾台北报导）国内疫情解封后北车广场大翻修，行政院副院长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>、经济部长<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E7%BE%8E%E8%8A%B1.md#1">王美花</a>与卫福部长陈时中、民进党立委何欣纯13日出席糕饼同业公会在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E5%8C%97%E8%BD%A6%E7%AB%99.md#1">台北车站</a>举办的公益活动，鼓励消费者用<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%80%8D%E5%88%B8.md#1">三倍券</a>振兴买气，同时响应做公益。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B2%88%E8%8D%A3%E6%B4%A5.md#1">沈荣津</a>表示，台湾糕饼业者相当有心，因疫情影响，业绩3、4成受影响，观光伴手礼业者营业额下降8、9成，振兴<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%89%E5%80%8D%E5%88%B8.md#1">三倍券</a>15日上路，希望民众多吃点心振兴经济还能做公益。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8E%8B%E7%BE%8E%E8%8A%B1.md#1">王美花</a>致词表示，疫情关系，这阵子国际观光客无法来台，趁三倍券热潮刺激内需，支持台湾在地点心，领三倍券实体券的人比较多，女生会拿去买甜点。</p>
+<p>卫福部长陈时中提到，有人会问他“糕饼跟防疫有什么关系？”疫情让人郁闷，吃甜点有好心情，才能健康长期抗疫，台湾食品制程及添加物有食药署严管品质，民众可安心吃；身为牙医，陈时中不忘提醒，吃完甜食要记得刷牙。</p>
 <p>全国县市糕饼公会在北车发起“用点心，让爱不隔离”活动，推广各店家明星商品，业者将把营业所得10%提拨做公益。</p>
 <p>责任编辑：晓玫</p>
 
@@ -17,42 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246114.md#1">振兴三倍券200元变400元 桃园夜市券真棒</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246532.md#1">三倍券预购逾8成买纸本 北捷：储值、1280月票不可用</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246536.md#1">消化三倍券申购潮 连2周六1,269邮局全日营业</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246539.md#1">纸本三倍券买双铁不可退票</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246935.md#1">逾1086万人预购三倍券 8成6选纸本券</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250194.md#1">台湾振兴三倍券7/15正式上路 消费诀窍一次看</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250255.md#1">分散三倍券领取人潮 延迟领券有优惠</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250488.md#1">纾解三倍券人潮 经部拟推晚领券优惠</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250632.md#1">在邮局购振兴三倍券 13日起可网路及电话预约</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/13/n12252439.md#1">印尼准备重新开放输出移工 优先考量台湾</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246114.md#1">振兴三倍券200元变400元 桃园夜市券真棒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246532.md#1">三倍券预购逾8成买纸本 北捷：储值、1280月票不可用</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246536.md#1">消化三倍券申购潮 连2周六1,269邮局全日营业</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246539.md#1">纸本三倍券买双铁不可退票</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246935.md#1">逾1086万人预购三倍券 8成6选纸本券</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/12/n12250194.md#1">台湾振兴三倍券7/15正式上路 消费诀窍一次看</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/12/n12250255.md#1">分散三倍券领取人潮 延迟领券有优惠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/12/n12250488.md#1">纾解三倍券人潮 经部拟推晚领券优惠</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/12/n12250632.md#1">在邮局购振兴三倍券 13日起可网路及电话预约</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13681196.md#1">陆军下士轻生 台监委促国防部究责</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/18/n11196827.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(3)</a></li><li><a href="https://github.com/ofatuf344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/15/n4663033.md#1" target="_blank">食道癌晚期的绝症患者获救</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250828.md#1">触目惊心 中储粮直属库再曝“硕鼠”事件</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250255.md#1">分散三倍券领取人潮 延迟领券有优惠</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12249970.md#1">长江流域洪水泛滥 江西进入“战时状态”</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12251066.md#1">东莞海滩惊现上万猪脚和内脏 遍布海岸线</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250402.md#1">女移工诈欺通缉遭逮 疑感染爱滋将尽速遣返</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/12/n12250927.md#1">中共广电总局新增20条禁令 杜汶泽发文嘲讽</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12247598.md#1">黄毅清涉毒获刑15年 狱中仍需付女儿抚养费</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12247242.md#1">演技遭轰 Angelababy自嘲：想突破却用力过猛</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12247809.md#1">澳洲延长港人签证 杜汶泽赞：明智之举</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/11/n12248215.md#1">《不死军团》影评：特殊的天赋 也可能招来麻烦</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/5/20/n12122697.md#1">高鹗补红楼之年龄错谬及深度削弱</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/6/5/n12163903.md#1">【命理】三奇贵格 为何落难坠马？</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/5/28/n12144105.md#1">【康熙大帝】毕生治河 天下安澜二十载</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12246373.md#1">只有江梅伴幽独——宋代闺秀词人孙道绚</a></li>
-<li><a href="https://github.com/ofatuf344/djy/blob/master/gb/20/7/10/n12247292.md#1">【馨香雅句】汉字被简化之后</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679468.md#1">【探索时分】叙利亚雇佣兵能帮上俄罗斯吗？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679596.md#1">【远见快评】传普京重大让步 乌克兰中立秘辛</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ofatuf344/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ofatuf344/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/13/n12252591.htm">沈荣津、王美花、陈时中出席北车 三倍券吃糕点做公益活动</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/13/n12252591.htm">沈荣津、王美花、陈时中出席北车 三倍券吃糕点做公益活动</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ofatuf344/djy/blob/master/gb/20/7/13/n12252591.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ofatuf344/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ofatuf344/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ofatuf344/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ofatuf344/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ofatuf344/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/13/n12252591.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
